[package]
name = "dragynfruit"
version = "0.1.0"
edition = "2021"

[features]
default = []

#accessibility = ["egui/accesskit", "egui/accesskit"]

# x11 = ["egui-winit/x11", "egui_glow/x11"]
x11 = ["eframe/x11"]

[dependencies]
dragynfruit_engine = { version = "0.1.0", path = "crates/dragynfruit_engine" }
eframe = { version = "0.29.1", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
] }
log = "0.4.22"
mimalloc = "0.1.43"
serde = { version = "1.0.214", features = ["derive"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
winit = { version = "0.30.5", default-features = false }
env_logger = "0.11.5"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[workspace]
members = ["crates/dragynfruit_sync", "crates/dragynfruit_engine"]
default-members = ["crates/dragynfruit_engine"]
