[package]
name = "dragynfruit_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
#libservo = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# canvas = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
compositing = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
compositing_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# constellation = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
devtools = { git = "https://github.com/servo/servo.git", optional = true, version = "0.0.1" }
egui = { version = "0.29.1", default-features = false, features = [
  "default_fonts",
] }
egui_glow = { version = "0.29.1", default-features = false, features = [
  "winit",
  "wayland",
] }
# embedder_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
fonts = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# gleam = "0.15.0"
log = "0.4.22"
net = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
net_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
script = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
script_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# servo_config = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# servo_geometry = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
servo_url = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
webdriver_server = { git = "https://github.com/servo/servo.git", optional = true, version = "0.0.1" }
webrender = { git = "https://github.com/servo/webrender", version = "0.62.0" }
webrender_api = { git = "https://github.com/servo/webrender", version = "0.62.0" }
webrender_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# winit = { version = "0.30.5", default-features = false }
eframe = { version = "0.29.1", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
] }

[profile.dev.package.'*']
opt-level = 3
