[package]
name = "dragynfruit_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# canvas = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
compositing = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
compositing_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
devtools = { git = "https://github.com/servo/servo.git", optional = true, version = "0.0.1" }
egui = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
] }
egui_glow = { version = "0.29.1", default-features = false, features = [
    "winit",
		"x11",
    "wayland",
] }
embedder_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
fonts = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
# euclid = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
log = "0.4.22"
net = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
net_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
script = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
script_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
servo_geometry = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
servo_url = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
surfman = { git = "https://github.com/servo/surfman", rev = "e0c34af64f2860bc56bc8a56e1c169a915b16aa3", features = ["x11"] }
webdriver_server = { git = "https://github.com/servo/servo.git", optional = true, version = "0.0.1" }
webrender = { git = "https://github.com/servo/webrender", branch = "0.65" }
webrender_api = { git = "https://github.com/servo/webrender", branch = "0.65" }
webrender_traits = { git = "https://github.com/servo/servo.git", version = "0.0.1" }
ipc-channel = { version = "0.19.0", features = ["async"] }
dashmap = "6.1.0"

[profile.dev.package.'*']
opt-level = 3
